# ISaT

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: python-package.yml
isat/colorSearch/: Dockerfile  context.py  dockerfile  main.py  search.py
isat/colorSearch/config/: config.py  config.yaml
isat/data/: data.db
isat/imageProcess/: Dockerfile  context.py  dockerfile  main.py  process.py
isat/imageProcess/config/: config.py
isat/imageSearch/: Dockerfile  context.py  main.py  search.py
isat/pkg/logger/: logger.py
isat/pkg/models/: image.py
isat/pkg/storage/local/: local.py
isat/pkg/storage/sqllite/: sqllite.py
isat/scraper/: context.py  crawler.py  dockerfile  main.py  scraper.py
isat/scraper/config/: config.py  config.yaml  urls_data.json
pkg/models/: image.py
pkg/storage/local/: local.py
pkg/storage/sqllite/: sqllite.py
