[tool.poetry]
name = "isat"
version = "0.1.0"
description = ""
authors = ["PosokhovVadim <posokhovvadyusha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
rembg = "^2.0.56"
sqlalchemy = "^2.0.29"
httpx = "^0.27.0"
pre-commit = "^3.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scraper = "isat.scraper.main:main"
