[tool.poetry]
name = "isat"
version = "0.1.0"
description = ""
authors = ["PosokhovVadim <posokhovvadyusha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
logging = "^0.4.9.6"
pyyaml = "^6.0.1"
pre-commit = "^3.6.2"
bs4 = "^0.0.2"
requests = "^2.31.0"
httpx = "^0.27.0"
tenacity = "^8.2.3"
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"
pillow = "^10.3.0"
redis = "^5.0.3"
imagehash = "^4.3.1"
rembg = "^2.0.56"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scraper = "isat.scraper.main:main"
im-processing = "isat.imageProcess.main:main"